# cpu-renderer

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  display.cpp  display.h  light.cpp  light.h  main.cpp  matrix.cpp  matrix.h  mesh.cpp  mesh.h  swap.cpp  swap.h  texture.cpp  texture.h  triangle.cpp  triangle.h  vector.cpp  vector.h
test/: CMakeLists.txt  display-test.cpp  vector-test.cpp
tests/: CMakeLists.txt
